fixed an issue where multiple essay_test instances were created if the user quickly hovers over multiple buttons - all the extra instances are cleared when the user goes out of the bounds of a button

--- a/Essays/style.css
+++ b/Essays/style.css
@@ -16,7 +16,10 @@
     display: flex; 
     justify-content: center; 
     position: relative;
+    width: 100%;
     height: 5vh; 
+    top: 3vh;
+    margin: 0;
     padding-bottom: 15vh;
   }
 
@@ -28,6 +31,7 @@
     padding: 3vh;
     margin: 2vh;
     border-radius: 4vh;
+    margin-bottom: 10vh;
     cursor: pointer;
     font-size: 3vh;
     transition: ease 0.4s;
@@ -40,7 +44,7 @@
 
   .button_back {
     color: white;
-    width: 75px;
+    width: 15vh;
     text-align: center;
     cursor: pointer;
     border-radius: 50%;
@@ -59,14 +63,14 @@
   .quote_area{
     position: absolute;
     width: 100%;
-    height: 50vh;
+    height: 45vh;
     background-color: #DC143C;
     transition: bottom 0.3s ease, top 0.3s ease, width 0.75s ease, height 0.75s ease;
     bottom: 0vh;
   }
   
   .quote_area.hovered {
-    bottom: -10vh;
+    bottom: -5vh;
   }
   
   .quote_area.clicked {
@@ -81,10 +85,17 @@
   }
 
   .upper_area {
-    position: relative; 
+    position: absolute; 
     width: 100%;
-    height: 50vh;
+    height: 55vh;
     background-color: white;
+    transition: bottom 0.3s ease, top 0.3s ease, width 0.75s ease, height 0.3s ease;
+    margin: 0vh;
+    padding: 0vh;
+  }
+
+  .upper_area.hovered {
+    height: 60%;
   }
 
   .quote{
@@ -92,7 +103,7 @@
     top: 40%;
     text-align:center;
     color: white;
-    font-size: xx-large;
+    font-size: 6vh;
     font-weight: 450;
   }
 
@@ -103,6 +114,7 @@
     font-size: 7vh;
     font-weight: 600;
     white-space: nowrap;
+    margin: 0;
   }
 
   @keyframes fade-in-animation {
